--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -1,4 +1,6 @@
-@import "services/addthis";
+// Anzahl Services
+@services: 15;  //max number of columns
+
 @import "services/facebook";
 @import "services/googleplus";
 @import "services/info";
