--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -1,32 +1,45 @@
+// Pinterest
+@col-pi: #bd081c;
+@col-pi-h: lighten(@col-pi, @lighten);
+@col-pi-cs: darken(@col-pi, @darken);
+@col-pi-bgs: lighten(@col-pi, @lighten_bg);
+
 .shariff {
     .pinterest {
         a {
-            background-color: #bd081c;
+            background-color: @col-pi;
             &:hover {
-                background-color: lighten(#bd081c, 5%);
+                background-color: @col-pi-h;
             }
-        }
+ 			div {
+				border: 1px solid @col-pi;
+				&:hover {
+					border-color: @col-pi-h;
+				}
+			}
+       }
         .fa-pinterest-p {
-            font-size: 22px;
-        }
-        .share_count {
-            color: #a31601;
-            background-color: #eda79d;
-        }
-    }
-    .theme-white {
-        .pinterest a {
-            color: #bd081c;
-        }
-    }
-}
-
-@media only screen and (min-width: 600px) {
-    .shariff {
-        .pinterest .fa-pinterest-p {
             font-size: 19px;
             position: relative;
             top: 1px;
+			&:before { content: @fa-var-pinterest-p; }
+        }
+        .share_count {
+            color: @col-pi-cs;
+            background-color: @col-pi-bgs;
         }
     }
+    .theme-white {
+        .pinterest a span {
+            color: @col-pi;
+        }
+    }
+	.theme-grey {
+		.pinterest a:hover {
+			background-color: @col-pi;
+			div {
+				border-color: @col-pi;
+			}
+		}
+	}
 }
