--- a/src/style/services/tumblr.less
+++ b/src/style/services/tumblr.less
@@ -1,27 +1,43 @@
+// Tumblr
+@col-tr: #34526f;
+@col-tr-h: lighten(@col-tr, @lighten);
+@col-tr-cs: darken(@col-tr, @darken);
+@col-tr-bgs: lighten(@col-tr, @lighten_bg);
+
 .shariff {
-  .tumblr {
-    a {
-      background-color: #36465D;
-      &:hover {
-        background-color: #44546B;
-      }
+    .tumblr {
+        a {
+            background-color: @col-tr;
+            &:hover {
+                background-color: @col-tr-h;
+            }
+			div {
+				border: 1px solid @col-tr;
+				&:hover {
+					border-color: @col-tr-h;
+				}
+			}
+        }
+        .fa-tumblr {
+            font-size: 19px;
+			&:before { content: @fa-var-tumblr; }
+        }
+        .share_count {
+            color: @col-tr-cs;
+            background-color: @col-tr-bgs;
+        }
     }
-    .fa-tumblr {
-      font-size: 28px;
+    .theme-white {
+        .tumblr a span {
+            color: @col-tr;
+        }
     }
-  }
-  .theme-white {
-    .tumblr a {
-      color: #5cbe4a;
-    }
-  }
+	.theme-grey {
+		.tumblr a:hover {
+			background-color: @col-tr;
+			div {
+				border-color: @col-tr;
+			}
+		}
+	}
 }
-
-@media only screen and (min-width: 600px) {
-  .shariff {
-    .tumblr .fa-tumblr {
-      font-size: 22px;
-    }
-  }
-}
-
