--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -11,3 +11,5 @@
 @import "services/whatsapp";
 @import "services/xing";
 @import "services/tumblr";
+@import "services/googleplusplus";
+@import "services/facebooklike";
