--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -12,4 +12,5 @@
 @import "services/xing";
 @import "services/tumblr";
 @import "services/googleplusplus";
+@import "services/print";
 @import "services/facebooklike";
