--- a/src/style/shariff-services.less
+++ b/src/style/shariff-services.less
@@ -13,4 +13,10 @@
 @import "services/tumblr";
 @import "services/googleplusplus";
 @import "services/print";
+@import "services/flattr";
 @import "services/facebooklike";
+@import "services/reddit";
+@import "services/stumbleupon";
+@import "services/bitcoin";
+@import "services/diaspora";
+@import "services/addthis";
