--- a/src/style/services/more.less
+++ b/src/style/services/more.less
@@ -1,5 +1,17 @@
 .shariff {
-    .print {
+	.loop-col(@services);
+	.loop-col(@n, @i: 1) when (@i <= @n) {
+		@j: (@i+1);
+		.more-@{i} li {
+			width: (100% / @i);
+			&:nth-child(n+@{j}) {
+				display: none;
+			}
+		}
+		.loop-col(@n, (@i + 1));
+	}
+
+    .more {
         a {
             background-color: #fff;
             &:hover {
@@ -12,18 +24,17 @@
 				}
 			}
         }
-        .fa-print {
-            font-size: 18px;
-			&:before { content: @fa-var-print; }
+        .fa-plus {
+            font-size: 16px;
+			&:before { content: @fa-var-plus; }
+        }
+        .fa-minus {
+            font-size: 16px;
+			&:before { content: @fa-var-minus; }
         }
     }
-	ul:not(.orientation-vertical) li.print {
-		@media (min-width: 550px) {
-		float: right;
-		}
-	}
     .theme-grey {
-        .print a {
+        .more a {
             &:hover {
                 background-color: #828282;
 				div {
