--- a/src/style/services/bitcoin.less
+++ b/src/style/services/bitcoin.less
@@ -27,12 +27,12 @@
             background-color: @col-bt-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .bitcoin a span {
-            color: @col-bt;
+            color: @col-bt !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.bitcoin a:hover {
 			background-color: @col-bt;
 			div {
