--- a/src/style/services/diaspora.less
+++ b/src/style/services/diaspora.less
@@ -21,12 +21,12 @@
 			&:before { content: @fa-var-times-circle; }
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .diaspora a span {
-            color: @col-di;
+            color: @col-di !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.diaspora a:hover {
 			background-color: @col-di;
 			div {
