--- a/src/style/services/facebook.less
+++ b/src/style/services/facebook.less
@@ -27,12 +27,12 @@
             background-color: @col-fb-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .facebook a span {
-            color: @col-fb;
+            color: @col-fb !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.facebook a:hover {
 			background-color: @col-fb;
 			div {
@@ -40,4 +40,5 @@
 			}
 		}
 	}
+
 }
