--- a/src/style/services/flattr.less
+++ b/src/style/services/flattr.less
@@ -27,12 +27,12 @@
             background-color: @col-fl-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .flattr a span {
-            color: @col-fl;
+            color: @col-fl !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.flattr a:hover {
 			background-color: @col-fl;
 			div {
