--- a/src/style/services/googleplus.less
+++ b/src/style/services/googleplus.less
@@ -29,12 +29,12 @@
             background-color: @col-gp-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .googleplus a span {
-            color: @col-gp;
+            color: @col-gp !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.googleplus a:hover {
 			background-color: @col-gp;
 			div {
