--- a/src/style/services/googleplusplus.less
+++ b/src/style/services/googleplusplus.less
@@ -29,12 +29,12 @@
 			}
 		}
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .googleplusplus a span {
             color: @col-gp;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.googleplusplus a:hover {
 			background-color: @col-gp;
 			div {
