--- a/src/style/services/linkedin.less
+++ b/src/style/services/linkedin.less
@@ -27,12 +27,12 @@
             background-color: @col-li-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .linkedin a span {
-            color: @col-li;
+            color: @col-li !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.linkedin a:hover {
 			background-color: @col-li;
 			div {
