--- a/src/style/services/more.less
+++ b/src/style/services/more.less
@@ -33,7 +33,7 @@
 			&:before { content: @fa-var-minus; }
         }
     }
-    .theme-grey {
+    .theme-grey, .theme-circle-grey {
         .more a {
             &:hover {
                 background-color: #828282;
