--- a/src/style/services/print.less
+++ b/src/style/services/print.less
@@ -22,7 +22,7 @@
 		float: right;
 		}
 	}
-    .theme-grey {
+    .theme-grey, .theme-circle-grey {
         .print a {
             &:hover {
                 background-color: #828282;
