--- a/src/style/services/reddit.less
+++ b/src/style/services/reddit.less
@@ -26,12 +26,12 @@
             background-color: @col-re-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .reddit a span {
-            color: @col-re;
+            color: @col-re !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.reddit a:hover {
 			background-color: @col-re;
 			div {
