--- a/src/style/services/tumblr.less
+++ b/src/style/services/tumblr.less
@@ -27,12 +27,12 @@
             background-color: @col-tr-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .tumblr a span {
-            color: @col-tr;
+            color: @col-tr !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.tumblr a:hover {
 			background-color: @col-tr;
 			div {
