--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -27,12 +27,12 @@
             background-color: @col-tw-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .twitter a span {
-            color: @col-tw;
+            color: @col-tw !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.twitter a:hover {
 			background-color: @col-tw;
 			div {
