--- a/src/style/services/whatsapp.less
+++ b/src/style/services/whatsapp.less
@@ -23,12 +23,12 @@
 			&:before { content: @fa-var-whatsapp; }
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .whatsapp a span {
-            color: @col-wa;
+            color: @col-wa !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.whatsapp a:hover {
 			background-color: @col-wa;
 			div {
