--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -27,12 +27,12 @@
             background-color: @col-xi-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .xing a span {
-            color: @col-xi;
+            color: @col-xi !important;
        }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.xing a:hover {
 			background-color: @col-xi;
 			div {
