--- a/src/style/services/mail.less
+++ b/src/style/services/mail.less
@@ -21,12 +21,12 @@
 			&:before { content: @fa-var-envelope; }
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .mail a span {
-            color: @col-ma;
+            color: @col-ma !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.mail a:hover {
 			background-color: @col-ma;
 			div {
