--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -29,12 +29,12 @@
             background-color: @col-pi-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .pinterest a span {
-            color: @col-pi;
+            color: @col-pi !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-grey {
 		.pinterest a:hover {
 			background-color: @col-pi;
 			div {
