--- a/src/style/services/stumbleupon.less
+++ b/src/style/services/stumbleupon.less
@@ -26,12 +26,12 @@
             background-color: @col-st-bgs;
         }
     }
-    .theme-white {
+    .theme-white, .theme-circle-white {
         .stumbleupon a span {
-            color: @col-st;
+            color: @col-st !important;
         }
     }
-	.theme-grey {
+	.theme-grey, .theme-circle-white {
 		.stumbleupon a:hover {
 			background-color: @col-st;
 			div {
