--- a/src/style/services/stumbleupon.less
+++ b/src/style/services/stumbleupon.less
@@ -31,7 +31,7 @@
             color: @col-st !important;
         }
     }
-	.theme-grey, .theme-circle-white {
+	.theme-grey, .theme-circle-grey {
 		.stumbleupon a:hover {
 			background-color: @col-st;
 			div {
