--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -138,8 +138,10 @@
 			div {
 				text-align: center;
 				border: none !important;
+				height: 40px;
 				span {
 					transition: margin 0.2s ease;
+					line-height: 40px;
 					&.share_count {
 						float: none;
 						background-color: transparent !important;
