--- a/src/style/services/info.less
+++ b/src/style/services/info.less
@@ -2,14 +2,12 @@
     .info {
         a {
             background-color: #fff;
+			border: 1px solid #ccc;
             &:hover {
                 background-color: #efefef;
             }
-			div {
-				border: 1px solid #ccc;
-				span {
-					color: #666;
-				}
+			span {
+				color: #666;
 			}
         }
         .fa-info {
@@ -17,13 +15,11 @@
 			&:before { content: @fa-var-info; }
         }
     }
-    .theme-grey {
+    .theme-grey, .theme-circle-grey {
         .info a {
             &:hover {
                 background-color: #828282;
-				div {
-					border-color: #828282;
-				}
+				border-color: #828282;
             }
 			span {
 				color: #fff;
