--- a/src/style/services/addthis.less
+++ b/src/style/services/addthis.less
@@ -8,25 +8,23 @@
     .addthis {
         a {
             background-color: @col-at;
+			border: 1px solid @col-at;
             &:hover {
                 background-color: @col-at-h;
-            }
-			div {
-				border: 1px solid @col-at;
-				&:hover {
-					border-color: @col-at-h;
-				}
+				border-color: @col-at-h;
 			}
         }
         .fa-addthis {
             font-size: 19px;
 			&:before { content: @fa-var-plus; }
         }
-        .share_count {
+    }
+	.theme-color, .theme-white {
+        .addthis .share_count {
             color: @col-at-cs;
             background-color: @col-at-bgs;
         }
-    }
+	}
     .theme-white, .theme-circle-white {
         .addthis a span {
             color: @col-at !important;
@@ -35,9 +33,7 @@
 	.theme-grey, .theme-circle-grey {
 		.addthis a:hover {
 			background-color: @col-at;
-			div {
-				border-color: @col-at;
-			}
+			border-color: @col-at;
 		}
 	}
 
