--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -2,14 +2,10 @@
     .facebooklike {
         a {
             background-color: @col-fb;
+			border: 1px solid @col-fb;
             &:hover {
                 background-color: @col-fb-h;
-            }
-			div {
-				border: 1px solid @col-fb;
-				&:hover {
-					border-color: @col-fb-h;
-				}
+				border-color: @col-fb-h;
 			}
         }
         .fa-facebooklike {
@@ -19,10 +15,6 @@
 				&:before { content: @fa-var-thumbs-o-up; }
 			}
         }
-        .share_count {
-            color: @col-fb-cs;
-            background-color: @col-fb-bgs;
-        }
 		.shariff-tooltip {
 			iframe {
 				height: 21px;
@@ -30,6 +22,12 @@
 			}
 		}
    }
+	.theme-color, .theme-white {
+        .facebooklike .share_count {
+            color: @col-fb-cs;
+            background-color: @col-fb-bgs;
+        }
+	}
     .theme-white, .theme-circle-white {
         .facebooklike a span {
             color: @col-fb !important;
@@ -38,9 +36,7 @@
 	.theme-grey, .theme-circle-grey {
 		.facebooklike a:hover {
 			background-color: @col-fb;
-			div {
-				border-color: @col-fb;
-			}
+			border-color: @col-fb;
 		}
 	}
 	.theme-circle-color, .theme-circle-white, .theme-circle-grey {
