--- a/src/style/services/flattr.less
+++ b/src/style/services/flattr.less
@@ -8,25 +8,23 @@
     .flattr {
         a {
             background-color: @col-fl;
-            &:hover {
+ 			border: 1px solid @col-fl;
+           &:hover {
                 background-color: @col-fl-h;
-            }
-			div {
-				border: 1px solid @col-fl;
-				&:hover {
-					border-color: @col-fl-h;
-				}
+				border-color: @col-fl-h;
 			}
         }
         .fa-money {
             font-size: 19px;
 			&:before { content: @fa-var-money; }
         }
-        .share_count {
+    }
+	.theme-color, .theme-white {
+        .flattr .share_count {
             color: @col-fl-cs;
             background-color: @col-fl-bgs;
         }
-    }
+	}
     .theme-white, .theme-circle-white {
         .flattr a span {
             color: @col-fl !important;
@@ -35,9 +33,7 @@
 	.theme-grey, .theme-circle-grey {
 		.flattr a:hover {
 			background-color: @col-fl;
-			div {
-				border-color: @col-fl;
-			}
+			border-color: @col-fl;
 		}
 	}
 }
