--- a/src/style/services/stumbleupon.less
+++ b/src/style/services/stumbleupon.less
@@ -7,25 +7,23 @@
     .stumbleupon {
         a {
             background-color: @col-st;
+ 			border: 1px solid @col-st;
             &:hover {
                 background-color: @col-st-h;
-            }
-			div {
-				border: 1px solid @col-st;
-				&:hover {
-					border-color: @col-st-h;
-				}
+				border-color: @col-st-h;
 			}
         }
         .fa-stumbleupon {
             font-size: 19px;
 			&:before { content: @fa-var-stumbleupon; }
         }
-        .share_count {
+    }
+	.theme-color, .theme-white {
+        .stumbleupon .share_count {
             color: @col-st-cs;
             background-color: @col-st-bgs;
         }
-    }
+	}
     .theme-white, .theme-circle-white {
         .stumbleupon a span {
             color: @col-st !important;
@@ -34,9 +32,7 @@
 	.theme-grey, .theme-circle-grey {
 		.stumbleupon a:hover {
 			background-color: @col-st;
-			div {
-				border-color: @col-st;
-			}
+			border-color: @col-st;
 		}
 	}
 }
