--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -8,25 +8,23 @@
     .xing {
         a {
             background-color: @col-xi;
+			border: 1px solid @col-xi;
             &:hover {
                 background-color: @col-xi-h;
-            }
- 			div {
-				border: 1px solid @col-xi;
-				&:hover {
-					border-color: @col-xi-h;
-				}
+				border-color: @col-xi-h;
 			}
        }
         .fa-xing {
             font-size: 19px;
 			&:before { content: @fa-var-xing; }
         }
-        .share_count {
+    }
+	.theme-color, .theme-white {
+        .xing .share_count {
             color: @col-xi-cs;
             background-color: @col-xi-bgs;
         }
-    }
+	}
     .theme-white, .theme-circle-white {
         .xing a span {
             color: @col-xi !important;
@@ -35,9 +33,7 @@
 	.theme-grey, .theme-circle-grey {
 		.xing a:hover {
 			background-color: @col-xi;
-			div {
-				border-color: @col-xi;
-			}
+			border-color: @col-xi;
 		}
 	}
 }
