grey share_count

--- a/src/style/services/facebooklike.less
+++ b/src/style/services/facebooklike.less
@@ -28,6 +28,10 @@
             background-color: @col-fb-bgs;
         }
 	}
+	.theme-grey .facebooklike a:hover .share_count {
+		color: @col-fb-cs;
+		background-color: @col-fb-bgs;
+	}
     .theme-white, .theme-circle-white {
         .facebooklike a span {
             color: @col-fb !important;
