--- a/src/style/services/flattr.less
+++ b/src/style/services/flattr.less
@@ -25,6 +25,10 @@
             background-color: @col-fl-bgs;
         }
 	}
+	.theme-grey .flattr a:hover .share_count {
+		color: @col-fl-cs;
+		background-color: @col-fl-bgs;
+	}
     .theme-white, .theme-circle-white {
         .flattr a span {
             color: @col-fl !important;
