--- a/src/style/services/googleplus.less
+++ b/src/style/services/googleplus.less
@@ -27,6 +27,10 @@
             background-color: @col-gp-bgs;
         }
 	}
+	.theme-grey .googleplus a:hover .share_count {
+		color: @col-gp-cs;
+		background-color: @col-gp-bgs;
+	}
     .theme-white, .theme-circle-white {
         .googleplus a span {
             color: @col-gp !important;
