--- a/src/style/services/googleplusplus.less
+++ b/src/style/services/googleplusplus.less
@@ -31,6 +31,10 @@
             background-color: @col-gp-bgs;
         }
 	}
+	.theme-grey .googleplusplus a:hover .share_count {
+		color: @col-gp-cs;
+		background-color: @col-gp-bgs;
+	}
     .theme-white, .theme-circle-white {
         .googleplusplus a span {
             color: @col-gp;
