--- a/src/style/services/info.less
+++ b/src/style/services/info.less
@@ -21,11 +21,14 @@
                 background-color: #828282;
 				border-color: #828282;
             }
-			span {
-				color: #fff;
-			}
         }
     }
+	.theme-grey {
+		.info a span {
+			color: #fff;
+		}
+
+	}
 
 }
 
