--- a/src/style/services/linkedin.less
+++ b/src/style/services/linkedin.less
@@ -25,6 +25,10 @@
             background-color: @col-li-bgs;
         }
 	}
+	.theme-grey .linkedin a:hover .share_count {
+		color: @col-li-cs;
+		background-color: @col-li-bgs;
+	}
     .theme-white, .theme-circle-white {
         .linkedin a span {
             color: @col-li !important;
