--- a/src/style/services/pinterest.less
+++ b/src/style/services/pinterest.less
@@ -27,6 +27,10 @@
             background-color: @col-pi-bgs;
         }
 	}
+	.theme-grey .pinterest a:hover .share_count {
+		color: @col-pi-cs;
+		background-color: @col-pi-bgs;
+	}
 	.theme-white, .theme-circle-white {
 		.pinterest a span {
 			color: @col-pi !important;
