--- a/src/style/services/reddit.less
+++ b/src/style/services/reddit.less
@@ -24,6 +24,10 @@
             background-color: @col-re-bgs;
         }
 	}
+	.theme-grey .reddit a:hover .share_count {
+		color: @col-re-cs;
+		background-color: @col-re-bgs;
+	}
     .theme-white, .theme-circle-white {
         .reddit a span {
             color: @col-re !important;
