--- a/src/style/services/stumbleupon.less
+++ b/src/style/services/stumbleupon.less
@@ -24,6 +24,10 @@
             background-color: @col-st-bgs;
         }
 	}
+	.theme-grey .stumbleupon a:hover .share_count {
+		color: @col-st-cs;
+		background-color: @col-st-bgs;
+	}
     .theme-white, .theme-circle-white {
         .stumbleupon a span {
             color: @col-st !important;
