--- a/src/style/services/tumblr.less
+++ b/src/style/services/tumblr.less
@@ -25,6 +25,10 @@
             background-color: @col-tr-bgs;
         }
 	}
+	.theme-grey .tumblr a:hover .share_count {
+		color: @col-tr-cs;
+		background-color: @col-tr-bgs;
+	}
     .theme-white, .theme-circle-white {
         .tumblr a span {
             color: @col-tr !important;
