--- a/src/style/services/twitter.less
+++ b/src/style/services/twitter.less
@@ -25,6 +25,10 @@
             background-color: @col-tw-bgs;
         }
 	}
+	.theme-grey .twitter a:hover .share_count {
+		color: @col-tw-cs;
+		background-color: @col-tw-bgs;
+	}
     .theme-white, .theme-circle-white {
         .twitter a span {
             color: @col-tw !important;
