--- a/src/style/services/xing.less
+++ b/src/style/services/xing.less
@@ -25,6 +25,10 @@
             background-color: @col-xi-bgs;
         }
 	}
+	.theme-grey .xing a:hover .share_count {
+		color: @col-xi-cs;
+		background-color: @col-xi-bgs;
+	}
     .theme-white, .theme-circle-white {
         .xing a span {
             color: @col-xi !important;
