--- a/src/style/shariff-layout.less
+++ b/src/style/shariff-layout.less
@@ -131,7 +131,6 @@
 				line-height: 40px;
 				&.share_count {
 					float: none;
-					color: #fff;
 				}
 			}
 		}
@@ -148,9 +147,13 @@
 		}
 	}
 	.theme-circle-grey li a {
-		background-color: #b0b0b0;
-		border-color: #b0b0b0;
+		background-color: #fff;
+		border-color: #888;
+		transition: all 0.4s ease;
 		span {
+			color: #888;
+		}
+		&:hover span {
 			color: #fff;
 		}
 	}
